--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "jsx": "preserve",
+    "jsxFactory": "JSX_ELE",
     "types": ["node"],
     "noEmit": true,
     "isolatedModules": true
